# knifer-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  aiflow.yaml
.github/workflows/: ci.yml
bench/: vstr_bench.rs
benches/: vstr_bench.rs
docs/: api-behavior-contract.md  dependency-policy.md  public-api-inventory.md  top-rust-utility-gap-analysis.md  vstr-api-parity.md  vstr-benchmark-history.md  vstr-complexity.md  vstr-matcher-backend-plan.md  vstr-top-string-gap-analysis.md
examples/: vbytes_encoding.rs  vstr_benchmark_smoke.rs  vstr_daily.rs  vstr_matcher.rs  vstr_unicode.rs
fuzz/: Cargo.toml  PLAN.md  README.md
fuzz/corpus/: escaping.txt  matcher.txt  path_matching.txt  replacement.txt  substring.txt  text_boundaries.txt
fuzz/fuzz_targets/: escaping.rs  matcher.rs  path_matching.rs  replacement.rs  substring.rs  text_boundaries.rs
scripts/: check-project-contract.sh
src/: lib.rs  vbytes.rs  vencoding.rs
src/vencoding/: conversion.rs  mod.rs
src/vrand/: mod.rs  secure.rs
src/vstr/: basic.rs  case.rs  classify.rs  emoji.rs  encoding.rs  fuzzy.rs  grapheme.rs  humanize.rs  inflection.rs  matcher.rs  mod.rs  normalize.rs  path.rs  pattern.rs  similarity.rs  tests.rs  text.rs  transliterate.rs  width.rs
src/vstr/basic/: affix.rs  casefold.rs  compare.rs  escape.rs  format.rs  manipulate.rs  measure.rs  mod.rs  predicate.rs  replace.rs  search.rs  split.rs  substring.rs  trim.rs  value.rs
src/vstr/matcher/: backend.rs  search.rs  types.rs
src/vstr/tests/: basic.rs  case.rs  classify.rs  emoji.rs  encoding.rs  fuzzy.rs  humanize.rs  inflection.rs  matcher.rs  path.rs  pattern.rs  property.rs  similarity.rs  support.rs  text.rs  transliterate.rs  unicode.rs
src/vstr/text/: content.rs  fold.rs  inspect.rs  normalize.rs  transform.rs  wrap.rs
src/vstr/text/wrap/: basic.rs  options.rs  options_wrap.rs  tokens.rs
src/vstr/width/: measure.rs  wrap.rs
src/vstr/width/wrap/: basic.rs  options_wrap.rs  tokens.rs
