[package]
name = "knifer-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Safe Rust utility toolkit for everyday business development."
license = "MIT"
repository = "https://github.com/imajinyun/knifer-rs"
documentation = "https://docs.rs/knifer-rs"
readme = "README.md"
keywords = ["utility", "string", "safe-rust", "business"]
categories = ["development-tools", "text-processing"]

[dependencies]
regex = { version = "1", optional = true }

[features]
default = []
pattern-regex = ["dep:regex"]
unicode-segmentation = []
unicode-width = []

[[bench]]
name = "vstr_bench"
path = "bench/vstr_bench.rs"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[lints.clippy]
all = "warn"
pedantic = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
