[package]
name = "knifer-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Safe Rust utility toolkit for everyday business development."
license = "MIT"
repository = "https://github.com/imajinyun/knifer-rs"
documentation = "https://docs.rs/knifer-rs"
readme = "README.md"
keywords = ["utility", "string", "safe-rust", "business"]
categories = ["development-tools", "text-processing"]

[lib]
name = "kniferrs"

[dependencies]
aho-corasick = { version = "1", optional = true }
deunicode = { version = "1", optional = true }
encoding_rs = { version = "0.8", optional = true }
memchr = { version = "2", optional = true }
regex = { version = "1", optional = true }
unicode-normalization = { version = "0.1", optional = true }
unicode-segmentation = { version = "1", optional = true }
unicode-width = { version = "0.2", optional = true }

[features]
default = []
encoding = ["dep:encoding_rs"]
matcher-aho-corasick = ["dep:aho-corasick"]
pattern-regex = ["dep:regex"]
search-memchr = ["dep:memchr"]
transliterate = ["dep:deunicode"]
unicode-normalization = ["dep:unicode-normalization"]
unicode-segmentation = ["dep:unicode-segmentation"]
unicode-width = ["dep:unicode-width"]

[dev-dependencies]
serde_json = "1"

[[bench]]
name = "vstr_bench"
path = "bench/vstr_bench.rs"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[lints.clippy]
all = "warn"
pedantic = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
